<resources>
    <string name="app_name">CounterApp</string>
    <string name="press">Press</string>
    <string name="alphabet">Alphabet</string>
    <string name="send">send</string>
    <string name="textview">TextView</string>
    <string name="show_toast">show_toast</string>
    <string name="open_camera">Open Camera</string>
    <string name="select_image">Select Image</string>
    <string name="open_dialpad">Open Dialpad</string>
    <string name="open_alert_dialogue">Open Alert Dialogue</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
</resources>